--- a/giscus_light.css
+++ b/giscus_light.css
@@ -3,6 +3,13 @@
  * Copyright (c) 2012 - 2017 GitHub, Inc.
  * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
  */
+
+:root {
+    --sneko-color-1: #f4f4f4;
+    --sneko-color-2: #f4f4f4;
+    --sneko-color-3: #fff;
+}
+
 .pl-c {
     color: #6a737d
 }
@@ -106,7 +113,7 @@
 
 .pl-mi2 {
     background-color: #005cc5;
-    color: #f6f8fa
+    color: var(--sneko-color-1)
 }
 
 .pl-mdr {
@@ -143,10 +150,10 @@ main {
     --color-border-tertiary: rgba(175, 184, 193, 0.4);
     --color-border-info: #0969da;
     --color-bg-canvas: #fff;
-    --color-bg-canvas-inset: #f6f8fa;
+    --color-bg-canvas-inset: var(--sneko-color-1);
     --color-bg-primary: #fff;
-    --color-bg-secondary: #f6f8fa;
-    --color-bg-tertiary: #f6f8fa;
+    --color-bg-secondary: var(--sneko-color-1);
+    --color-bg-tertiary: var(--sneko-color-1);
     --color-bg-overlay: #fff;
     --color-bg-info: #ddf4ff;
     --color-state-focus-border: #0969da;
@@ -161,12 +168,12 @@ main {
     --color-hidden-text-expander-bg: rgba(175, 184, 193, 0.4);
     --color-label-border: #d0d7de;
     --color-input-bg: #fff;
-    --color-input-contrast-bg: #f6f8fa;
+    --color-input-contrast-bg: var(--sneko-color-1);
     --color-input-border: #d0d7de;
     --color-diff-blob-num-text: #57606a;
     --color-diff-blob-num-hover-text: #24292f;
     --color-btn-text: #24292f;
-    --color-btn-bg: #f6f8fa;
+    --color-btn-bg: var(--sneko-color-1);
     --color-btn-border: rgba(27, 31, 36, 0.15);
     --color-btn-shadow: 0 1px 0 rgba(27, 31, 36, 0.04);
     --color-btn-inset-shadow: inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
@@ -186,7 +193,7 @@ main {
     --color-btn-primary-disabled-text: hsla(0, 0%, 100%, 0.8);
     --color-btn-primary-disabled-bg: #94d3a2;
     --color-btn-primary-disabled-border: rgba(27, 31, 36, 0.15);
-    --color-scale-gray-0: #f6f8fa;
+    --color-scale-gray-0: var(--sneko-color-1);
     --color-scale-gray-1: #eaeef2;
     --color-scale-blue-1: #b6e3ff;
     --color-scale-blue-8: #0a3069;
